--- a/webapp/src/themes/variables.css
+++ b/webapp/src/themes/variables.css
@@ -6,7 +6,7 @@
   --background: #fcfcfc;
 
   --light-gray: #ededed;
-  --gray: #4f4f4f;
+  --gray: #999999;
   --dark-gray: #222222;
 
   --light-green: #d1eee6;
