--- a/webapp/src/components/Modal/BaseModal/BaseModal.css
+++ b/webapp/src/components/Modal/BaseModal/BaseModal.css
@@ -40,8 +40,8 @@
 }
 .modal-content {
   position: relative;
-  background-color: #ffffff;
-  border: 1px solid #999999;
+  background-color: #FFF;
+  border: 1px solid (--gray);
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
