feat: Update TxStatus Component. Use loading indicator and only one filter.

--- a/webapp/src/components/TxStatus/TxStatusIcon/TxStatusIcon.css
+++ b/webapp/src/components/TxStatus/TxStatusIcon/TxStatusIcon.css
@@ -1,11 +1,11 @@
-.TxStatusIcon .confirmed {
+.TxStatusIcon .icon.confirmed {
   color: var(--green);
 }
 
-.TxStatusIcon .pending {
-  color: var(--yellow);
+.TxStatusIcon .icon.pending {
+  color: var(--gray);
 }
 
-.TxStatusIcon .failed {
+.TxStatusIcon .icon.failed {
   color: var(--red);
 }
