--- a/webapp/src/components/SettingsPage/SettingsForm/SettingsForm.css
+++ b/webapp/src/components/SettingsPage/SettingsForm/SettingsForm.css
@@ -11,7 +11,8 @@
   margin-bottom: 30px;
 }
 
-.SettingsForm.form .field > label {
+.SettingsForm.form .field > label,
+.SettingsForm .ui.dropdown>.text {
   font-size: 16px;
 }
 
