--- a/webapp/src/themes/variables.css
+++ b/webapp/src/themes/variables.css
@@ -13,7 +13,8 @@
   --green: #30d7a9;
   --dark-green: #2e7d32;
 
-  --red: #e53935;
+  --red: #d1344e;
+  --dark-red: #970a09;
 
   --yellow: #f2be24;
 
