--- a/webapp/src/components/EditParcelPage/EditParcelPage.css
+++ b/webapp/src/components/EditParcelPage/EditParcelPage.css
@@ -1,3 +1,8 @@
+.EditParcelPage .ui.header.title {
+  margin-top: 30px;
+  margin-bottom: 0;
+}
+
 .EditParcelPage .subtitle {
   color: var(--purple);
   font-weight: 100;
