--- a/webapp/src/components/TransferParcelPage/TransferParcelPage.css
+++ b/webapp/src/components/TransferParcelPage/TransferParcelPage.css
@@ -1,3 +1,8 @@
+.TransferParcelPage .ui.header.title {
+  margin-top: 30px;
+  margin-bottom: 0;
+}
+
 .TransferParcelPage .subtitle {
   color: var(--purple);
   font-weight: 100;
