--- a/webapp/src/components/ActivityPage/ActivityPage.css
+++ b/webapp/src/components/ActivityPage/ActivityPage.css
@@ -1,6 +1,3 @@
-.ActivityPage {
-}
-
 .ActivityPage .container {
   padding-top: 20px;
 }
@@ -24,4 +21,9 @@
   font-size: 16px;
   text-align: center;
   color: var(--gray);
+}
+.ActivityPage .sign-in {
+  display: block;
+  text-align: center;
+  margin-top: 50px !important;
 }
