feat: Wrap pages in Page component. Provide Navbar and Footer

--- a/webapp/src/components/AtlasPage/AtlasPage.css
+++ b/webapp/src/components/AtlasPage/AtlasPage.css
@@ -1,5 +1,9 @@
+.Page > .AtlasPage {
+  height: 90vh;
+  padding: 0;
+}
+
 .AtlasPage {
-  height: 100%;
   position: relative;
   overflow: hidden;
 }
