--- a/webapp/src/components/AtlasPage/Map/Map.css
+++ b/webapp/src/components/AtlasPage/Map/Map.css
@@ -1,7 +1,7 @@
 .map-container {
   position: absolute;
-  left: 0px;
-  right: 0px;
-  top: 94px;
-  bottom: 0px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
