--- a/webapp/src/components/ActivityPage/ActivityPage.css
+++ b/webapp/src/components/ActivityPage/ActivityPage.css
@@ -1,15 +1,7 @@
-.ActivityPage .container {
-  padding-top: 20px;
-}
-
 .ActivityPage .section-title {
   margin-bottom: 10px;
   font-weight: bolder;
   overflow: hidden;
-}
-
-.ActivityPage .transaction-list {
-  margin-top: 30px;
 }
 
 .ActivityPage .Badge {
@@ -22,8 +14,13 @@
   text-align: center;
   color: var(--gray);
 }
+
 .ActivityPage .sign-in {
   display: block;
   text-align: center;
-  margin-top: 50px !important;
+  margin-top: 50px;
+}
+
+.ActivityPage .pending-transaction-list {
+  margin-bottom: 30px;
 }
