--- a/webapp/src/components/Navbar/Navbar.css
+++ b/webapp/src/components/Navbar/Navbar.css
@@ -5,7 +5,6 @@
   height: 94px;
   justify-content: center;
   padding: 0px 40px;
-  min-width: 400px;
 }
 
 .Navbar .navbar-header {
@@ -68,10 +67,17 @@
   transition: none;
 }
 
+@media (min-width: 500px) {
+  .Navbar {
+    min-width: 400px;
+  }
+}
+
 @media (max-width: 800px) {
   .Navbar {
     justify-content: flex-start;
   }
+
   .Navbar .navbar-header {
     display: none;
   }
