fix: publication price is always a string to avoid precision problems

--- a/webapp/src/components/ParcelDetailPage/ParcelDetailPage.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetailPage.css
@@ -34,3 +34,9 @@
   color: #aaa;
   font-style: italic;
 }
+
+@media (min-width: 768px) {
+  .ParcelDetailPage .parcel-owner-container {
+    text-align: right;
+  }
+}
