feat: Translate the entire site

--- a/webapp/src/components/ProfilePage/Contribution/Contribution.css
+++ b/webapp/src/components/ProfilePage/Contribution/Contribution.css
@@ -30,6 +30,10 @@
   font-weight: 700;
 }
 
+.Contribution .icon.loading {
+  color: var(--primary);
+}
+
 .Contribution .land-count .amount {
   display: inline-block;
   overflow: hidden;
