--- a/webapp/src/themes/variables.css
+++ b/webapp/src/themes/variables.css
@@ -3,10 +3,10 @@
   --secondary: #00dbef;
 
   --text: #ffffff;
-  --background: #1f2335;
+  --background: #1f2333;
 
   --light-gray: #ededed;
-  --gray: #999999;
+  --gray: #8f9199;
   --dark-gray: #222222;
 
   --light-green: #d1eee6;
