--- a/webapp/src/components/AtlasPage/Map/Map.css
+++ b/webapp/src/components/AtlasPage/Map/Map.css
@@ -5,3 +5,43 @@
   top: 0;
   bottom: 0;
 }
+
+.leaflet-control {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.leaflet-control a {
+  color: var(--gray) !important;
+  font-weight: 100 !important;
+  font-size: 15px !important;
+  height: 25px !important;
+  line-height: 24px !important;
+}
+
+.leaflet-control-zoom-in {
+  border-radius: 5px 0px 0px 5px !important;
+  border-bottom: none !important;
+  border-right: 1px solid var(--light-gray);
+}
+
+.leaflet-control-zoom-out {
+  border-radius: 0px 5px 5px 0px !important;
+}
+
+.leaflet-bar {
+  border-radius: 5px;
+}
+
+.leaflet-control-attribution {
+  display: none;
+}
+
+.leaflet-bottom .leaflet-control {
+  margin-bottom: 185px;
+}
+
+.leaflet-right .leaflet-control {
+  float: right;
+  margin-right: 20px;
+}
