--- a/webapp/src/components/CancelSalePage/CancelSalePage.css
+++ b/webapp/src/components/CancelSalePage/CancelSalePage.css
@@ -1,5 +1,5 @@
 .CancelSalePage .subtitle {
-  color: var(--dark-purple);
+  color: white;
   font-weight: 100;
   font-family: 'Source Sans Pro Light';
   font-size: 1.2em;
