--- a/webapp/src/components/AtlasPage/Minimap/Minimap.css
+++ b/webapp/src/components/AtlasPage/Minimap/Minimap.css
@@ -1,6 +1,6 @@
 .Minimap {
   width: 150px;
-  height: 150px;
+  height: 149px;
   background: black url('../../../images/minimap.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -9,7 +9,7 @@
   bottom: 20px;
   z-index: 1040;
   opacity: 1;
-  border: 1px solid black;
+  border: 2px solid #0d0e18;
   border-bottom: none;
   box-shadow: 0 0px 35px rgba(0, 0, 0, 0.4);
   border-radius: 5px;
