--- a/webapp/src/themes/components/Header.css
+++ b/webapp/src/themes/components/Header.css
@@ -1,7 +1,7 @@
 .ui.header {
   font-family: 'Source Sans Pro Light', Helvetica, sans-serif;
-  font-weight: 400;
-  color: var(--purple);
+  font-weight: 800;
+  color: white;
 }
 
 .ui.header.huge {
