feat: improved ParcelDetailPage

--- a/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelOwner/ParcelOwner.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelOwner/ParcelOwner.css
@@ -16,7 +16,7 @@
 }
 
 .ParcelOwner.is-district .district-name {
-  color: var(--dark-gray);
+  color: var(--gray);
 }
 
 .ParcelOwner .AddressLink {
