feat: MANA approve to allow

--- a/webapp/src/components/BuyParcelPage/BuyParcelPage.css
+++ b/webapp/src/components/BuyParcelPage/BuyParcelPage.css
@@ -11,6 +11,10 @@
   font-family: 'Source Sans Pro';
 }
 
+.BuyParcelPage .message.warning h3 {
+  font-weight: bolder;
+}
+
 .BuyParcelPage button + button {
   margin-left: 15px !important;
 }
