feat: implemented new designs on parcel detail modals

--- a/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelPublication/ParcelPublication.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelPublication/ParcelPublication.css
@@ -1,6 +1,7 @@
 .ParcelPublication {
   border-radius: 10px;
   background-color: var(--dark-gray);
+  margin-bottom: 15px;
 }
 
 .ParcelPublication .buy-column {
