--- a/webapp/src/components/EditParcelPage/EditParcelPage.css
+++ b/webapp/src/components/EditParcelPage/EditParcelPage.css
@@ -1,5 +1,5 @@
 .EditParcelPage .subtitle {
-  color: var(--purple);
+  color: white;
   font-weight: 100;
   font-family: 'Source Sans Pro Light', Helvetica, sans-serif;
 }
