--- a/webapp/src/components/PublishPage/PublishPage.css
+++ b/webapp/src/components/PublishPage/PublishPage.css
@@ -1,5 +1,5 @@
 .PublishPage .subtitle {
-  color: var(--dark-purple);
+  color: white;
   font-weight: 100;
   font-family: 'Source Sans Pro Light';
 }
