fix: tx idle styles

--- a/webapp/src/themes/components/Message.css
+++ b/webapp/src/themes/components/Message.css
@@ -1,3 +1,8 @@
+.ui.message {
+  background-color: var(--dark-gray);
+  color: white !important;
+}
+
 .ui.warning.message {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, sans-serif;
