feat: implemented new styles on Profile page

--- a/webapp/src/components/MarketplacePage/Publication/Publication.css
+++ b/webapp/src/components/MarketplacePage/Publication/Publication.css
@@ -58,3 +58,15 @@
 .Publication .footer:after {
   display: none;
 }
+
+.Publication .coords {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  display: inline;
+  color: var(--gray);
+}
+
+.Publication:hover .coords {
+  color: var(--red);
+}
