--- a/webapp/src/components/ProfilePage/ProfilePage.css
+++ b/webapp/src/components/ProfilePage/ProfilePage.css
@@ -44,5 +44,15 @@
 }
 
 .ProfilePage .profile-owner .AddressLink {
-  height: 20px;
+  height: 25px;
+  margin-left: 5px;
+}
+
+.ProfilePage .label {
+  background-color: var(--dark-gray) !important;
+  color: white !important;
+}
+
+.ProfilePage .label.active {
+  background-color: var(--red) !important;
 }
