--- a/webapp/src/components/ProfilePage/Contribution/Contribution.css
+++ b/webapp/src/components/ProfilePage/Contribution/Contribution.css
@@ -24,21 +24,8 @@
   position: relative;
 }
 
-.Contribution .land-count {
-  display: flex;
-  margin: 0px;
-  font-weight: 700;
-}
-
 .Contribution .icon.loading {
   color: var(--primary);
-}
-
-.Contribution .land-count .amount {
-  display: inline-block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 80px;
 }
 
 .Contribution .footer {
@@ -53,5 +40,27 @@
 }
 
 .Contribution .ui.header {
-  color: var(--purple) !important;
+  color: white !important;
+}
+
+.Contribution .meta {
+  margin-bottom: 30px;
+}
+
+.Contribution .land-count {
+  position: absolute;
+  bottom: 10px;
+  color: var(--red) !important;
+  display: flex;
+  align-items: center;
+}
+
+.Contribution .land-icon {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-right: 10px;
+  background-color: var(--light-red);
+  border: 1px solid var(--red);
+  box-shadow: 0px 0px 10px 1px var(--red);
 }
