--- a/webapp/src/themes/components/Menu.css
+++ b/webapp/src/themes/components/Menu.css
@@ -14,3 +14,10 @@
   color: var(--red) !important;
   cursor: pointer;
 }
+
+.ui.dropdown .item,
+.ui.dropdown .item,
+.ui.dropdown .item:hover {
+  border: none !important;
+  color: black !important;
+}
