--- a/webapp/src/components/ColorKeyPage/ColorKeyPage.css
+++ b/webapp/src/components/ColorKeyPage/ColorKeyPage.css
@@ -5,8 +5,8 @@
 .ColorKeyPage .land-color-keys {
   padding: 35px 50px 20px 50px;
   margin: 26px 0;
-  background: #FBFBFB;
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.10);
+  background: var(--dark-gray);
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
   border-radius: 5px;
 }
 
