fix: intercom position and size

--- a/webapp/src/components/Footer/Footer.css
+++ b/webapp/src/components/Footer/Footer.css
@@ -18,7 +18,7 @@
   justify-content: space-evenly;
   align-items: center;
   flex: 1 0 auto;
-  padding: 0 20px;
+  padding: 0 20px 0px 85px;
 }
 
 .Footer .footer-column.left {
