--- a/webapp/src/components/Page/Page.css
+++ b/webapp/src/components/Page/Page.css
@@ -3,10 +3,9 @@
 }
 
 .Page > div {
-  min-height: 70vh;
-  padding-top: 30px;
-  padding-bottom: 30px;
   position: relative;
   min-height: calc(100% - var(--footer-height));
-  background-color: var(--background);
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: linear-gradient(#1f2333, #0d0f17);
 }
