--- a/webapp/src/components/ActivityPage/Transaction/Transaction.css
+++ b/webapp/src/components/ActivityPage/Transaction/Transaction.css
@@ -26,6 +26,8 @@
   height: 64px;
   margin-right: 15px;
   float: left;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .Transaction .transaction-timestamp {
