feat: Consistent publication notice. fix: alert when publishing a parcel with a cancelled pub

--- a/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelPublication/ParcelPublication.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelPublication/ParcelPublication.css
@@ -14,3 +14,8 @@
 .ParcelPublication .buy-column .button {
   margin: 0px !important;
 }
+
+.ParcelPublication .PublicationExpiration {
+  font-size: 20px;
+  display: block;
+}
