--- a/webapp/src/themes/variables.css
+++ b/webapp/src/themes/variables.css
@@ -29,4 +29,6 @@
 
   --navbar-height: 94px;
   --footer-height: 80px;
+
+  --font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
 }
