--- a/webapp/src/components/Navbar/Navbar.css
+++ b/webapp/src/components/Navbar/Navbar.css
@@ -53,8 +53,7 @@
   color: var(--primary);
   transition: none;
   text-transform: uppercase;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, sans-serif;
+  font-family: var(--font-family);
   font-size: 13px;
   padding: 9px;
   font-weight: 100;
