--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -10,8 +10,7 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, sans-serif;
+  font-family: var(--font-family);
 }
 
 h1,
@@ -188,7 +187,7 @@ button {
   cursor: pointer;
 }
 
-/* ------------ 
+/* ------------
   Intercom  */
 
 .intercom-launcher-frame,
