--- a/webapp/src/components/Mana/Mana.css
+++ b/webapp/src/components/Mana/Mana.css
@@ -9,3 +9,13 @@
 .Mana .ManaIcon {
   margin-right: 0.4em;
 }
+
+.Mana.disabled {
+  color: var(--gray);
+}
+
+.Mana.disabled .ManaIcon {
+  filter: gray; /* IE6-9 */
+  -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+  filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
+}
