--- a/webapp/src/components/MarketplacePage/MarketplacePage.css
+++ b/webapp/src/components/MarketplacePage/MarketplacePage.css
@@ -30,3 +30,7 @@
   background-color: var(--background) !important;
   opacity: 0.8 !important;
 }
+
+.MarketplacePage .ui.label.active {
+  background-color: var(--primary);
+}
