--- a/webapp/src/components/SettingsPage/SettingsPage.css
+++ b/webapp/src/components/SettingsPage/SettingsPage.css
@@ -32,7 +32,7 @@
   display: inline-block;
 }
 
-.SettingsPage .AddressLink {
+.SettingsPage .AddressBlock {
   margin-right: 40px;
   box-shadow: 0px 5px 15px 5px rgba(0, 0, 0, 0.3);
 }
