feat: added Transfer button on Settings page

--- a/webapp/src/components/SettingsPage/SettingsForm/SettingsForm.css
+++ b/webapp/src/components/SettingsPage/SettingsForm/SettingsForm.css
@@ -49,3 +49,10 @@
   font-size: 16px;
   margin-bottom: 1em;
 }
+
+.SettingsForm .mana {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+}
